선물, 경조사 경로 분기 처리
